# rustycommits

./: Cargo.toml  LICENSE
lib/: Cargo.toml
lib/src/: lib.rs  message_parser.rs  message_tokenizer.rs  types.rs
src/: lib.rs  main.rs
src/message_parser/: parser.rs  tokenizer.rs  types.rs
src/parser_lib/: mod.rs  slicable_rc_string.rs
src/parser_lib/errors/: mod.rs  unexpected_end_of_file.rs  unexpected_token_error.rs
src/parser_lib/lexer/: lexer.rs  lexer_impl.rs  mod.rs
src/parser_lib/lexer/types/: enums.rs  mod.rs  token.rs
src/parser_lib/lexing/types/: mod.rs  token.rs
src/parser_lib/parser/: mod.rs  parser.rs  parser_impl.rs
src/parser_lib/parser/parser_functions/: mod.rs  parse_body.rs  parse_description.rs  parse_footer.rs  parse_scope.rs  parse_topic.rs  parse_type.rs  utils.rs
src/parser_lib/parser/types/: commit_message.rs  enums.rs  mod.rs  symbol.rs
src/parser_lib/parser/types/parser_result/: commit_message.rs  mod.rs
src/parser_lib/parsing/: parser.rs
src/parser_lib/parsing/parser_functions/: determine_case.rs  mod.rs  parse_body.rs  parse_description.rs  parse_footer.rs  parse_scope.rs  parse_topic.rs  utils.rs
src/parser_lib/parsing/types/: mod.rs  symbol.rs
src/parser_lib/parsing/types/parser_result/: commit_message.rs
src/parser_lib/test_utils/: mod.rs  test_token_builder.rs
src/parser_lib/validation/: load.rs  mod.rs  validator.rs
src/parser_lib/validation/rules/: body_rules.rs  description_rules.rs  footer_rules.rs  mod.rs  scope_rules.rs  topic_rules.rs
src/parser_lib/validator/: rules.rs
