[package]
name = "rustycommits"
version = "0.1.0"
edition = "2021"

[lib]
name = "parser_lib"
path = "src/lib.rs"

[[bin]]
name = "rustycommits"
path = "src/main.rs"

[dependencies]
itertools = "0.12.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.59"
toml = "0.8.12"

[dev-dependencies]
tempfile = "3.10.1"
